--- a/frontend/app/src/app/main/main.component.html
+++ b/frontend/app/src/app/main/main.component.html
@@ -1,12 +1,12 @@
 <div class="container">
-  <div class="text-center mt-5">
-    <h3>All Registered Users</h3>
-  </div>
-  <div class="row mt-5">
-    <div *ngFor="let presentation of alluser" class="user col-2" (click)="goToChat(presentation.userName)">
-      <div *ngIf="presentation.userName != check">
-        {{presentation.userName}}
-      </div>
+    <div class="text-center mt-5">
+        <h3 class="header">All Registered Users</h3>
     </div>
-  </div>
+    <div class="row mt-5 justify-content-center">
+        <div *ngFor="let presentation of alluser" class="user-card col-sm-6 col-md-4 col-lg-3 mb-3">
+            <div *ngIf="presentation.userName != check" class="user-content">
+                <i class="fas fa-user-circle user-icon"></i> {{ presentation.userName }}
+            </div>
+        </div>
+    </div>
 </div>
